--- a/public/table.css
+++ b/public/table.css
@@ -71,6 +71,8 @@ button.selected{
   font-weight: bold;
 }
 
+.
+
 .input {
   font-size: 16px;
   font-size: Max(16px, 1em);
@@ -122,7 +124,7 @@ textarea.input {
 .input[readonly] {
   border-style: dotted;
   cursor: not-allowed;
-  color: #777777;
+  color:#777777 ;
 }
 
 label {
