--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/table.css" />
+    <link rel="stylesheet" type="text/css" href="/home.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
@@ -23,7 +23,7 @@
           <button type="button" id="filterByCourse" onclick="setFilter(3)">Corso</button>
           <div class = "tab">
             <input class = "input" type = "text" id = "searchValue" placeholder = "Cerca">
-           <button type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
+           <button class = "action-button" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
           </div> 
         </div>  
         <br>
@@ -85,7 +85,8 @@
           <div class = "tab">
            <input class = "input" type="text" id="corso" name="corso" placeholder = "Corso di studi">
           </div>
-          <button type="button" id="newValue" onclick= "addTutor()"> <i class="material-symbols-outlined">add</i></button>
+          <br>
+            <button class = "action-button" type="button" id="newValue" onclick= "addTutor()"> <i class="material-symbols-outlined">add</i></button>
         </div>
       </form>
     </div> 
@@ -100,7 +101,7 @@
         <label for= "search"> ID Tutor</label><br>
         <div class = "tab">
           <input class = "input" type="number" id="idTutor" name="idTutor" placeholder = "Inserisci ID tutor">
-         <button type="button" id="deleteValue" onclick= "deleteTutor()" ><i class="material-symbols-outlined">delete</i></button>
+         <button class = "action-button" type="button" id="deleteValue" onclick= "deleteTutor()" ><i class="material-symbols-outlined">delete</i></button>
         </div>
       </form>
     </div>
@@ -124,7 +125,7 @@
         </div>
         <div class = "tab">
           <input class = "input" type="text" id="valore" name="valore" placeholder = "Inserisci modifica" >
-          <button type="button" id="changeValue" onclick= "updateTutor()" ><i class="material-symbols-outlined">change_circle</i></button>
+          <button class = "action-button" type="button" id="changeValue" onclick= "updateTutor()" ><i class="material-symbols-outlined">change_circle</i></button>
         </div>
       </form>
     </div>
