completamento lato server e lato client

--- a/views/home.html
+++ b/views/home.html
@@ -429,34 +429,34 @@
     <option value ="Università degli Studi di Torino"></option>
     <option value ="Politecnico di Torino"></option>
     <!Università della Puglia>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
+    <option value ="Politecnico di Bari"></option>
+    <option value ="Università degli Studi di Bari"></option>
+    <option value ="Università degli Studi di Foggia"></option>
+    <option value ="Università del Salento"></option>
     <!Università della Sardegna>
-    <option value =""></option>
-    <option value =""></option>
+    <option value ="Università degli Studi di Cagliari"></option>
+    <option value ="Università degli Studi di Sassari"></option>
     <!Università della Sicilia>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
+    <option value ="Università degli Studi di Catania"></option>
+    <option value ="Università degli Studi di Messina"></option>
+    <option value ="Università degli Studi di Palermo"></option>
     <!Università della Toscana>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <!Università della Trentino>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
-    <option value =""></option>
+    <option value ="Università degli Studi di Firenze"></option>
+    <option value ="IMT - Scuola IMT Alti Studi Lucca"></option>
+    <option value ="Università di Pisa "></option>
+    <option value ="Università degli Studi di Siena"></option>
+    <option value ="Università per stranieri di Siena"></option>
+    <!Università della Trentino-Alto Adige>
+    <option value ="Università degli Studi di Trento"></option>
+    <option value ="Libera Università di Bolzano"></option>
+    <!Università della Umbria>
+    <option value ="Università degli Studi di Perugia"></option>
+    <option value ="Università per stranieri di Perugia"></option>
+    <!Università della Veneto>
+    <option value ="Università degli Studi di Padova"></option>
+    <option value ="Università Ca' Foscari Venezia"></option>
+    <option value ="Università Iuav di Venezia"></option>
+    <option value ="Università degli Studi di Verona"></option>
     
 
   </datalist>
