--- a/views/home.html
+++ b/views/home.html
@@ -135,16 +135,19 @@
   <script>
     var myArray = []
     var newArray = []
-    const filtroEsame   = false;
-    const filtroEmail   = false;
     
     //valori di default nel momento del caricamento della pagina
-    localStorage.setItem("defaultFilter", 0);
-    localStorage.setItem("defaultSearchValue", " ");
+    const filtroEsame   = false;
+    const filtroEmail   = false;
+    const defaultFilter = 0;
+    const defaultSearchValue = " ";
+    const defaultAction = -1;
     
-    sessionStorage.setItem("filter", localStorage.defaultFilter);
-    sessionStorage.setItem("searchValue", "none");
-    sessionStorage.setItem("action", -1);
+    var myArray = [];
+    var newArray = [];
+    var filter = defaultFilter;
+    var searchValue = defaultSearchValue;
+    var action = defaultAction;
     
     //Realizzazione della tabella con jquery ajax
     $.ajax({
@@ -203,7 +206,7 @@
     
     //FUNZIONE PER RICERCARE UN TUTOR
     async function searchTutors(){
-      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
+      searchValue = document.getElementById("searchValue").value;
 
       //opzioni per la fetch
       const options = {
@@ -214,7 +217,7 @@
       };
       
       //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ sessionStorage.searchValue, options)
+      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+ filter +'/'+ searchValue, options)
       .then((response) => {
         if (response.ok) {
           alert("La ricerca ha prodotto risultati!");
@@ -239,12 +242,7 @@
     
     //funzione per settare il filtro per effettuare la ricerca
     function setFilter(value){
-      sessionStorage.setItem("filter", value);
-    }
-    
-    //funzione per settare il valore delle ricerca
-    function setSearchValue(){
-      sessionStorage.setItem("searchValue",document.getElementById("searchValue").value );
+      filter = value;
     }
 
     //funzione per creare una tabella di tutor in html
@@ -269,11 +267,11 @@
     
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(idTutor){
-      sessionStorage.setItem("idTutor", document.getElementById("idTutor").value);
+      idTutor = document.getElementById("idTutor").value;
       
-      if(sessionStorage.idTutor.length == 0)
+      if(document.getElementById("idTutor").value != " ")
       {
-          sessionStorage.setItem("idTutor",null);
+          idTutor = null;
       }
       //opzioni per la fetch
       const options = {
@@ -281,7 +279,7 @@
       };
       
       //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/deleteTutor/'+ sessionStorage.idTutor, options)
+      fetch('https://p2p-tutoring.glitch.me/home/deleteTutor/'+ idTutor, options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
