--- a/views/home.html
+++ b/views/home.html
@@ -267,12 +267,11 @@
     
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(idTutor){
-      idTutor = document.getElementById("idTutor").value;
       
-      if(document.getElementById("idTutor").value != " ")
-      {
-          idTutor = null;
+      if(document.getElementById("idTutor").value != " "){
+        idTutor = document.getElementById("idTutor").value;
       }
+      
       //opzioni per la fetch
       const options = {
         method: 'DELETE'
