🎆🐩 Checkpoint ./views/home.html:44341290/39

--- a/views/home.html
+++ b/views/home.html
@@ -145,9 +145,9 @@
     
     var myArray = [];
     var newArray = [];
-    var filter = defaultFilter;
-    var searchValue = defaultSearchValue;
-    var action = defaultAction;
+    var filter = localStorage.defaultFilter;
+    var searchValue = localStorage.defaultSearchValue;
+    var action = localStorage.defaultAction;
     
     //Realizzazione della tabella con jquery ajax
     $.ajax({
