--- a/views/home.html
+++ b/views/home.html
@@ -135,19 +135,16 @@
   <script>
     var myArray = []
     var newArray = []
-    
-    //valori di default nel momento del caricamento della pagina
     const filtroEsame   = false;
     const filtroEmail   = false;
-    const defaultFilter = 0;
-    const defaultSearchValue = " ";
-    const defaultAction = -1;
     
-    var myArray = [];
-    var newArray = [];
-    var filter = localStorage.defaultFilter;
-    var searchValue = localStorage.defaultSearchValue;
-    var action = localStorage.defaultAction;
+    //valori di default nel momento del caricamento della pagina
+    localStorage.setItem("defaultFilter", 0);
+    localStorage.setItem("defaultSearchValue", " ");
+    
+    sessionStorage.setItem("filter", localStorage.defaultFilter);
+    sessionStorage.setItem("searchValue", "none");
+    sessionStorage.setItem("action", -1);
     
     //Realizzazione della tabella con jquery ajax
     $.ajax({
@@ -206,7 +203,7 @@
     
     //FUNZIONE PER RICERCARE UN TUTOR
     async function searchTutors(){
-      searchValue = document.getElementById("searchValue").value;
+      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
 
       //opzioni per la fetch
       const options = {
@@ -217,7 +214,7 @@
       };
       
       //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+ filter +'/'+ searchValue, options)
+      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ sessionStorage.searchValue, options)
       .then((response) => {
         if (response.ok) {
           alert("La ricerca ha prodotto risultati!");
@@ -242,7 +239,12 @@
     
     //funzione per settare il filtro per effettuare la ricerca
     function setFilter(value){
-      filter = value;
+      sessionStorage.setItem("filter", value);
+    }
+    
+    //funzione per settare il valore delle ricerca
+    function setSearchValue(){
+      sessionStorage.setItem("searchValue",document.getElementById("searchValue").value );
     }
 
     //funzione per creare una tabella di tutor in html
@@ -267,18 +269,19 @@
     
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(idTutor){
+      sessionStorage.setItem("idTutor", document.getElementById("idTutor").value);
       
-      if(document.getElementById("idTutor").value != " "){
-        idTutor = document.getElementById("idTutor").value;
+      if(sessionStorage.idTutor.length == 0)
+      {
+          sessionStorage.setItem("idTutor",null);
       }
-      
       //opzioni per la fetch
       const options = {
         method: 'DELETE'
       };
       
       //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/deleteTutor/'+ idTutor, options)
+      fetch('https://p2p-tutoring.glitch.me/home/deleteTutor/'+ sessionStorage.idTutor, options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
