--- a/views/home.html
+++ b/views/home.html
@@ -141,10 +141,14 @@
     //valori di default nel momento del caricamento della pagina
     localStorage.setItem("defaultFilter", 0);
     localStorage.setItem("defaultSearchValue", " ");
+    localStorage.setItem("defaultAction", -1);
     
-    sessionStorage.setItem("filter", localStorage.defaultFilter);
-    sessionStorage.setItem("searchValue", "none");
-    sessionStorage.setItem("action", -1);
+    //sessionStorage.setItem("filter", localStorage.defaultFilter);
+    var filter = localStorage.defaultFilter;
+    //sessionStorage.setItem("searchValue", "none");
+    var searchValue = sessionStorage.seachValue;
+    //sessionStorage.setItem("action", -1);
+    var action = sessionStorage.defaultAction;
     
     //Realizzazione della tabella con jquery ajax
     $.ajax({
@@ -203,7 +207,9 @@
     
     //FUNZIONE PER RICERCARE UN TUTOR
     async function searchTutors(){
-      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
+      
+      if(localStorage.setItem("defaultSearchValue", " ");)
+      searchValue = localStorage.setItem("defaultSearchValue", " ");;
 
       //opzioni per la fetch
       const options = {
@@ -214,7 +220,7 @@
       };
       
       //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ sessionStorage.searchValue, options)
+      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ searchValue, options)
       .then((response) => {
         if (response.ok) {
           alert("La ricerca ha prodotto risultati!");
