--- a/views/home.html
+++ b/views/home.html
@@ -141,14 +141,11 @@
     //valori di default nel momento del caricamento della pagina
     localStorage.setItem("defaultFilter", 0);
     localStorage.setItem("defaultSearchValue", " ");
-    localStorage.setItem("defaultAction", -1);
+    localStorage.setItem("changeValue", undefined);
     
-    //sessionStorage.setItem("filter", localStorage.defaultFilter);
-    var filter = localStorage.defaultFilter;
-    //sessionStorage.setItem("searchValue", "none");
-    var searchValue = sessionStorage.seachValue;
-    //sessionStorage.setItem("action", -1);
-    var action = sessionStorage.defaultAction;
+    sessionStorage.setItem("filter", localStorage.defaultFilter);
+    sessionStorage.setItem("searchValue", "none");
+    sessionStorage.setItem("action", -1);
     
     //Realizzazione della tabella con jquery ajax
     $.ajax({
@@ -173,7 +170,6 @@
         corso :      document.getElementById("corso").value,
         esami:       [] 
       })
-      
       //opzioni per la fetch
       const options = {
         method: 'POST',
@@ -207,9 +203,7 @@
     
     //FUNZIONE PER RICERCARE UN TUTOR
     async function searchTutors(){
-      
-      if(localStorage.setItem("defaultSearchValue", " ");)
-      searchValue = localStorage.setItem("defaultSearchValue", " ");;
+      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
 
       //opzioni per la fetch
       const options = {
@@ -220,7 +214,7 @@
       };
       
       //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ searchValue, options)
+      fetch('https://p2p-tutoring.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ sessionStorage.searchValue, options)
       .then((response) => {
         if (response.ok) {
           alert("La ricerca ha prodotto risultati!");
@@ -276,11 +270,6 @@
     // FUNZIONE PER ELIMINARE UN TUTOR 
     async function deleteTutor(idTutor){
       sessionStorage.setItem("idTutor", document.getElementById("idTutor").value);
-      
-      if(sessionStorage.idTutor.length == 0)
-      {
-          sessionStorage.setItem("idTutor",null);
-      }
       //opzioni per la fetch
       const options = {
         method: 'DELETE'
@@ -315,14 +304,9 @@
     //FUNZIONE PER MODIFICARE UN TUTOR 
     async function updateTutor(){
       //definisco i vali paramentri da passare all'api
-      var id             = document.getElementById("id").value;
-      const action       = sessionStorage.action;
-      var changeValue    = document.getElementById("valore").value;
-      
-      if(changeValue.length == 0 || id.length == 0){
-          changeValue = null;
-          id = null;
-      }
+      const id         = document.getElementById("id").value;
+      const action     = sessionStorage.action;
+      const changeValue  = document.getElementById("valore").value;
             
       //opzioni per la fetch
       const options = {
