🎨🚒 Checkpoint ./views/home.html:44341290/1129 ./server.js:44341290/1

--- a/views/home.html
+++ b/views/home.html
@@ -203,8 +203,11 @@
     
     //FUNZIONE PER RICERCARE UN TUTOR
     async function searchTutors(){
-      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
-
+      console.log(document.getElementById("searchValue").value != "");
+      if(document.getElementById("searchValue").value != ""){
+        sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
+      }
+      
       //opzioni per la fetch
       const options = {
         method: 'GET',
