--- a/views/home.html
+++ b/views/home.html
@@ -100,7 +100,7 @@
       <form action="" id="deleteTutor">
         <label for= "search"> ID Tutor</label><br>
         <div class = "tab">
-          <input class = "input" type="number" id="idTutor" name="idTutor" placeholder = "Inserisci ID tutor">
+          <input class = "input" type="number" id="idTutorDelete" name="idTutor" placeholder = "Inserisci ID tutor">
          <button class = "action-button" type="button" id="deleteValue" onclick= "deleteTutor()" ><i class="material-symbols-outlined">delete</i></button>
         </div>
       </form>
@@ -115,7 +115,7 @@
       <form id = "updateTutor">
         <label for="id">ID Tutor</label><br>
         <div class = "tab">
-          <input class = "input" id="id" name="id" placeholder = "Inserisci ID tutor" >
+          <input class = "input" id="idTutorUpdate" name="id" placeholder = "Inserisci ID tutor" >
         </div>
         <br>
         <div>
@@ -275,8 +275,8 @@
     async function deleteTutor(idTutor){
       
       //controllo se è stato inserito il parametro della ricerca, in caso il valore rimane di default
-      if(document.getElementById("idTutor").value != ""){
-        sessionStorage.setItem("idTutor", document.getElementById("idTutor").value);
+      if(document.getElementById("idTutorDelete").value != ""){
+        var id = document.getElementById("idTutorDelete").value;
       }
       
       //opzioni per la fetch
@@ -285,7 +285,7 @@
       };
       
       //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/deleteTutor/'+ sessionStorage.idTutor, options)
+      fetch('https://p2p-tutoring.glitch.me/home/deleteTutor/'+ id, options)
       .then((response) => {
         if (response.ok) {
           alert("Tutor eliminato!");
@@ -316,8 +316,8 @@
       const action     = sessionStorage.action;
       
       //controllo se è stato inserito il parametro della ricerca, in caso il valore rimane di default
-      if(document.getElementById("id").value != "" || document.getElementById("valore").value){
-        const id         = document.getElementById("id").value;
+      if(document.getElementById("idTutorUpdate").value != "" || document.getElementById("valore").value){
+        const id         = document.getElementById("idTutorUpdate").value;
         const changeValue  = document.getElementById("valore").value;
       }
             
