Rewound to commit bcffdee77f74133341a8525bd6fb41be36dfba6a + 0 edits

--- a/views/home.html
+++ b/views/home.html
@@ -139,7 +139,7 @@
     const filtroEmail   = false;
     
     //valori di default nel momento del caricamento della pagina
-    localStorage("defaultFilter", 0);
+    const defaultFilter = 0;
     const defaultSearchValue = null;
     const changeValue = null;;
     
