--- a/views/home.html
+++ b/views/home.html
@@ -147,7 +147,7 @@
     sessionStorage.setItem("filter", defaultFilter);
     sessionStorage.setItem("searchValue", defaultSearchValue);
     sessionStorage.setItem("action", -1);
-    sessionStorage.setItem("idTutor", localStorage.);
+    sessionStorage.setItem("idTutor", 0);
     
     //Realizzazione della tabella con jquery ajax
     $.ajax({
