--- a/views/home.html
+++ b/views/home.html
@@ -319,18 +319,20 @@
     //FUNZIONE PER MODIFICARE UN TUTOR 
     async function updateTutor(){
       //definisco i vali paramentri da passare all'api
-      const action     = sessionStorage.action;
+      const action     = localStorage.action;
+      var id           = localStorage.defaultIdTutor;
+      var changeValue  = localStorage.defaultChangeValue;
       
-      console.log(document.getElementById("id").value != "" || document.getElementById("valore").value != "");
+      console.log(document.getElementById("id").value != "" || document.getElementById("valore").value);
       
       //controllo se è stato inserito il parametro della ricerca, in caso il valore rimane di default
-      if(document.getElementById("id").value != "" || document.getElementById("valore").value != ""){
+      if(document.getElementById("id").value != "" || document.getElementById("valore").value){
         const id           = document.getElementById("id").value;
         const changeValue  = document.getElementById("valore").value;
       }
-      else{
-        
-      }
+      
+      console.log(id);
+        console.log(changeValue); 
       //opzioni per la fetch
       const options = {
         method: 'PUT'
