🍩🌋 Checkpoint ./views/home.html:44341290/1359 ./server.js:44341290/341

--- a/views/home.html
+++ b/views/home.html
@@ -55,21 +55,21 @@
         <div>
           <label for="name">Nome</label>
           <div class = "tab">
-            <input class = "input" type="text" id="name" name="name" placeholder = "Nome" required>
+            <input class = "input" type="text" id="name" name="name" placeholder = "Nome" >
           </div>
         </div>
         <br>
         <div>
           <label for="surname">Cognome</label>
           <div class = "tab">
-           <input class = "input" type="text" id="surname" name="name" placeholder = "Cognome" required>
+           <input class = "input" type="text" id="surname" name="name" placeholder = "Cognome" >
           </div>
         </div>
         <br>
         <div>
           <label for="email">Email</label>
           <div class = "tab">
-           <input class = "input" type="email" id="email" name="email" placeholder = "Email" required>
+           <input class = "input" type="email" id="email" name="email" placeholder = "Email" >
           </div>
         </div>
         <br>
@@ -166,7 +166,7 @@
     //FUNZIONE PER AGGIUNGERE UN TUTOR
     async function addTutor(){
       //definisco i dati del nuovo tutor aggiungendo alcuni campi di default
-      const newTutor = ({
+      var newTutor = ({
         id:          Date.now().toString(),
         nome :       document.getElementById("name").value,
         cognome :    document.getElementById("surname").value,
@@ -175,6 +175,11 @@
         corso :      document.getElementById("corso").value,
         esami:       [] 
       });
+      
+      var esito = validazioneInput(newTutor);
+      if(esito == false){
+        newTutor = null;
+      }
       
       //opzioni per la fetch
       const options = {
@@ -372,6 +377,11 @@
       else{
         alert("Nessun esame inserito!");
       }
+    }
+    
+    function validateNewTutor(tutor){
+      if(tutor.nome == "" || tutor.cognome == "" || tutor.universita == "" || tutor.corso == "" )
+        return false;
     }
     
     //funzione per settare filtro esame
