--- a/views/home.html
+++ b/views/home.html
@@ -176,40 +176,46 @@
         esami:       [] 
       });
       
-      var esito = validazioneInput(newTutor);
-      if(esito == false){
-        newTutor = null;
+      var esito = validateNewTutor(newTutor);
+      if(esito != false){
+          //opzioni per la fetch
+          const options = {
+            method: 'POST',
+            headers: {
+            'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(newTutor),
+          };
+          //eseguo la fetch
+          fetch('https://p2p-tutoring.glitch.me/home/addTutor', options)
+          .then((response) => {
+            if (response.ok) {
+              alert("Nuovo tutor aggiunto!");
+              return response.json();
+            }
+            alert('ERROR!Something went wrong!');
+          })
+          .then(data =>{
+            //aggiorno la tabella
+            if(data != undefined || data > 0 ){
+              myArray = data;
+            }
+            buildTable(myArray);
+          })
+          .catch(e => {
+              console.log(e);
+          });
+          //pulisco la form
+          document.getElementById("addTutor").reset();
       }
-      
-      //opzioni per la fetch
-      const options = {
-        method: 'POST',
-        headers: {
-        'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(newTutor),
-      };
-      //eseguo la fetch
-      fetch('https://p2p-tutoring.glitch.me/home/addTutor', options)
-      .then((response) => {
-        if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
-          return response.json();
-        }
-        alert('ERROR!Something went wrong!');
-      })
-      .then(data =>{
-        //aggiorno la tabella
-        if(data != undefined || data > 0 ){
-          myArray = data;
-        }
-        buildTable(myArray);
-      })
-      .catch(e => {
-          console.log(e);
-      });
-      //pulisco la form
-      document.getElementById("addTutor").reset();
+      else{
+        //error bad request
+        res.status(400).json({
+            message:
+              "ERRORE! I valori inseriti non sono validi.",
+            status: 400,
+          });
+      }
     }
     
     //FUNZIONE PER RICERCARE UN TUTOR
